src/renderer/views/MainRouteRenderer.scss
/* ... */
.opname {
    .op-type.icon {
        line-height: 1;

        &.op {
            svg {
                fill: #5F6B7C;
            }
        }

        &.queue {
            svg {
                stroke: #5F6B7C;
            }
        }
    }

    .core-runtime-metrics {
        margin-left: 12px;

        .model-perf-estimate {
            display: inline-flex;
            align-items: center;
            gap: 4px;

            .bp4-icon {
                svg {
                    fill: $tt-yellow;
                }

                &.out-of-memory {
                    svg {
                        fill: currentColor;
                    }
                }
            }

        }

        .core-runtime-item {
            margin-bottom: 4px;
            display: flex;

            .bp4-popover2-target {
                display: flex;
            }

            h4 {
                font-size: 10pt;
                padding-right: 6px;
            }

            .core-runtime-value {
                font-size: 10pt;
            }
        }
    }

    .graph-vertex-details {
        color: #000;
        margin-left: 20px;

        .queue-detail-item {
            margin: 4px 0 10px 12px;
            display: flex;

            .queue-detail-label {
                font-size: 12px;
                padding-right: 6px;
            }

            .queue-detail-value {
                font-size: 12px;
            }
        }
    }

    label {
        margin-bottom: 0;
    }

    .io-label {
        margin-left: 12px;
        margin-bottom: 6px;
    }

    .operation-operand {
        margin-bottom: 5px;
        margin-left: 20px;

        p {
            margin-bottom: 0;
            font-size: 12px;
        }
    }

    .graph-vertex-details {
        margin-left: 0;
    }

    span {
        color: $tt-white-text;
    }
}

.theme-dark {
    color: #fff;

    .queue-detail-item {
        color: #fff;
    }

    .foreign {
        .bp4-icon {
            svg {
                fill: $tt-extra-light-gray;
            }
        }
    }

    .op-element .offchip-button svg { color: $tt-medium-light-gray; }

    .op-type.icon {
        &.op {
            svg {
                fill: $tt-light-gray;
            }
        }

        &.queue {
            svg {
                stroke: $tt-light-gray;
            }
        }
    }
}

.bp4-control input:focus ~ .bp4-control-indicator {
    //outline: none;
}

.congested-link {
    color: #ff0000;
}

.progress-bar {
    width: 100px;
    background-color: $progress-bar-track;
    height: 4px;
    position: absolute;
    bottom: -2px;

    span {
        background-color: $progress-bar-fill;
        height: 4px;
        display: block;
    }
}


.link-saturation-slider {
    .bp4-slider-track {
        .bp4-slider-progress {
            background-color: $link-saturation-track;

            &.bp4-intent-primary,
            &:first-of-type {
                background-color: $link-saturation-fill;
            }
        }
    }
}

.slowest-operand-render {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 4px;
}

